"Pruebas unitarias cumplen con rubrica"